<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    android:background="@drawable/main_activity_background_wg"
    tools:context="com.example.chris.popularmovies.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_display_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:padding="16dp"
        android:text="@string/error_msg"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/pb_loading_posters"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_prev_page"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_prev"
            android:contentDescription="@string/img_desc_left_btn"/>
        <TextView
            android:id="@+id/tv_page_num"
            android:layout_width="50dp"
            android:gravity="center"
            style="@style/ShadowedText"
            android:layout_height="match_parent"
            android:text="1"/>

        <ImageButton
            android:id="@+id/ib_next_page"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_next"
            android:contentDescription="@string/img_desc_right_btn"/>
    </LinearLayout>
</FrameLayout>
