<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="12dp"
    android:background="@drawable/main_activity_background_wg"
    tools:context="com.example.chris.popularmovies.MovieDetail">
    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"
        />
    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ShadowedText"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/iv_backdrop"
        />

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:gravity="center_vertical"
        android:layout_below="@id/iv_backdrop">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                android:text="@string/release_date"/>
            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@string/movie_rating"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/synopsys_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:layout_below="@id/details_layout"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/movie_description"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp">


            <TextView
                android:id="@+id/tv_movie_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading_movie"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/tv_movie_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_msg"
        android:visibility="invisible"
        />
</RelativeLayout>
